refactor(global): Migrate type declaration imports to ES module syntax, update eco.config baseUrl, and improve image processor type generation.

--- a/playground/react/src/pages/mdx-test.mdx
+++ b/playground/react/src/pages/mdx-test.mdx
@@ -1,11 +1,11 @@
 import { Counter } from '@/components/counter';
 
 export const config = {
-    dependencies: {
-        components: [Counter],
-        stylesheets: ['./test-style.css']
-    }
-}
+	dependencies: {
+		components: [Counter],
+		stylesheets: ['./test-style.css'],
+	},
+};
 
 # Hello MDX
 
