feat(postcss-processor): added filepath resolution to postcss processor

--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -124,7 +124,7 @@ const css = await PostCssProcessor.processPath('path/to/file.css');
 import { PostCssProcessor } from '@ecopages/postcss-processor';
 
 const css = `body { @apply bg-blue-500; }`;
-const processed = await PostCssProcessor.processStringOrBuffer(css);
+const processed = await PostCssProcessor.processStringOrBuffer(css, { filePath: 'style.css' });
 
 ```
 </CodeBlock>
